data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2190.wast
;; 10. **Test 10: Forward Branch with Incorrect Operand Type**    - **Description**: Construct a loop where `br_table` intends a forward branch but the operand stack types do not match the target. Include conditions to re-enter the loop.    - **Constraint**: Ensures forward branching operand type matches are handled well.    - **Infinite Loop Relation**: The mismatch in operand types for forward branching can fail to exit the loop appropriately, creating infinite looping conditions.

(assert_invalid
  (module (func $forward-branch-incorrect-operand-type
    (block (result i32)
      (loop (result i32)
        (br_table 1 0 (i32.const 1) (f32.const 0.0))
      )
    )
  ))
  "type mismatch"
)